--- a/main/http_server/axe-os/src/app/pages/swarm/swarm.component.html
+++ b/main/http_server/axe-os/src/app/pages/swarm/swarm.component.html
@@ -9,8 +9,9 @@
           <!-- Input group container -->
           <div class="input-group" style="flex: 1; display: flex; flex-flow: nowrap;">
             <input nbInput id="manualAddIp" formControlName="manualAddIp" type="text"
-                   [placeholder]="'UPDATE.ENTER_IP_ADDRESS' | translate" style="flex: 1; width: 100%;" />
-            <button nbButton status="primary" (click)="add()" [disabled]="form.invalid">{{ 'UPDATE.ADD' | translate }}</button>
+              [placeholder]="'UPDATE.ENTER_IP_ADDRESS' | translate" style="flex: 1; width: 100%;" />
+            <button nbButton status="primary" (click)="add()" [disabled]="form.invalid">{{ 'UPDATE.ADD' | translate
+              }}</button>
           </div>
         </div>
       </form>
@@ -26,7 +27,8 @@
           {{ scanning ? ('UPDATE.SCANNING' | translate) : ('UPDATE.AUTOMATIC_SCAN' | translate) }}
         </button>
         <button nbButton status="info" (click)="refreshList()" [disabled]="scanning || isRefreshing">
-          {{ isRefreshing ? ('UPDATE.REFRESHING' | translate) : (('UPDATE.REFRESH_LIST' | translate) + ' (' + refreshIntervalTime + ')') }}
+          {{ isRefreshing ? ('UPDATE.REFRESHING' | translate) : (('UPDATE.REFRESH_LIST' | translate) + ' (' +
+          refreshIntervalTime + ')') }}
         </button>
       </div>
 
@@ -34,10 +36,9 @@
       <div class="mt-3 mt-md-0 time-slider">
         <label for="refresh-interval">{{ 'UPDATE.REFRESH_INTERVAL' | translate }}:</label>
         <div class="progress-wrap mx-2">
-          <input id="refresh-interval" type="range" class="progress" [formControl]="refreshIntervalControl"
-                 [min]="5" [max]="30" step="1" />
-          <div class="progress-foreground"
-               [style.width.%]="((refreshIntervalControl.value - 5) / 25) * 100">
+          <input id="refresh-interval" type="range" class="progress" [formControl]="refreshIntervalControl" [min]="5"
+            [max]="30" step="1" />
+          <div class="progress-foreground" [style.width.%]="((refreshIntervalControl.value - 5) / 25) * 100">
           </div>
         </div>
         <span>{{ refreshTimeSet }}s</span>
@@ -91,13 +92,17 @@
           </tr>
           <tr *ngIf="dp" class="dual-pool-header">
             <td></td>
-            <td>Pool 1</td><td>Pool 2</td>
+            <td>Pool 1</td>
+            <td>Pool 2</td>
             <td></td>
-            <td>Pool 1</td><td>Pool 2</td>
+            <td>Pool 1</td>
+            <td>Pool 2</td>
             <td></td>
             <td></td>
-            <td>Pool 1</td><td>Pool 2</td>
-            <td>Pool 1</td><td>Pool 2</td>
+            <td>Pool 1</td>
+            <td>Pool 2</td>
+            <td>Pool 1</td>
+            <td>Pool 2</td>
             <td></td>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
@@ -145,11 +150,8 @@
                 <div [ngClass]="{'text-orange-500': axe.temp > 68}">
                   {{ axe.temp | number:'1.0-1' }}°<small>C</small>
                 </div>
-                <div *ngIf="axe.vrTemp"
-                     [nbTooltip]="'UPDATE.VOLTAGE_REGULATOR_TEMPERATURE' | translate"
-                     tooltipPosition="top"
-                     [ngClass]="{'text-orange-500': axe.vrTemp > 90}"
-                     class="text-sm">
+                <div *ngIf="axe.vrTemp" [nbTooltip]="'UPDATE.VOLTAGE_REGULATOR_TEMPERATURE' | translate"
+                  tooltipPosition="top" [ngClass]="{'text-orange-500': axe.vrTemp > 90}" class="text-sm">
                   {{ axe.vrTemp | number:'1.0-1' }}°<small>C</small>
                 </div>
               </td>
@@ -160,7 +162,8 @@
               <!-- Best Diff with Best Session Diff tooltip -->
               <td [colSpan]="dp ? 2 : 1">
                 <div>{{ axe.bestDiff }}</div>
-                <div *ngIf="!dualPool" [nbTooltip]="'UPDATE.BEST_SESSION_DIFF' | translate" tooltipPosition="top" class="text-sm">
+                <div *ngIf="!dualPool" [nbTooltip]="'UPDATE.BEST_SESSION_DIFF' | translate" tooltipPosition="top"
+                  class="text-sm">
                   {{ axe.bestSessionDiff }}
                 </div>
                 <div *ngIf="dualPool" class="text-sm">&nbsp;</div>
@@ -171,10 +174,9 @@
 
               <!-- Action Buttons -->
               <td [rowSpan]="dualPool ? 2 : 1">
-                <button nbButton status="warning" size="small"
-                        (click)="edit(axe)"
-                        [nbTooltip]="axe.supportsAsicApi ? ('UPDATE.EDIT_SETTINGS' | translate) : ('UPDATE.FIRMWARE_UPDATE_REQUIRED' | translate)"
-                        tooltipPosition="top">
+                <button nbButton status="warning" size="small" (click)="edit(axe)"
+                  [nbTooltip]="axe.supportsAsicApi ? ('UPDATE.EDIT_SETTINGS' | translate) : ('UPDATE.FIRMWARE_UPDATE_REQUIRED' | translate)"
+                  tooltipPosition="top">
                   <nb-icon icon="edit-outline"></nb-icon>
                 </button>
               </td>
@@ -186,25 +188,32 @@
               </td>
               <td [rowSpan]="dualPool ? 2 : 1">
                 <button nbButton status="basic" size="small" (click)="remove(axe)"
-                [nbTooltip]="'UPDATE.REMOVE_FROM_LIST' | translate" tooltipPosition="top">
+                  [nbTooltip]="'UPDATE.REMOVE_FROM_LIST' | translate" tooltipPosition="top">
                   <nb-icon icon="trash-2-outline"></nb-icon>
                 </button>
               </td>
             </tr>
             <tr *ngIf="dualPool" class="dual-pool-2nd-row">
-              @let hr = axe.hashRate * 1000000000;
-              @let hr1 = hr * axe.stratum.poolBalance / 100;
-              @let hr2 = hr * (100 - axe.stratum.poolBalance) / 100;
-              <td class="shrink">{{ hr1 | hashSuffix }}</td>
-              <td class="shrink">{{ hr2 | hashSuffix }}</td>
-
-              <td class="shrink">{{ p0.accepted }}<br/>{{ p0.rejected }}</td>
-              <td class="shrink">{{ p1.accepted }}<br>{{ p1.rejected }}</td>
-              <td class="shrink">{{ p0.poolDifficulty }}</td>
-              <td class="shrink">{{ p1.poolDifficulty }}</td>
-              <td class="shrink">{{ p0.bestDiff | humanReadable }}</td>
-              <td class="shrink">{{ p1.bestDiff | humanReadable }}</td>
+              @let c0 = isPoolConnected(axe, 0);
+              @let c1 = isPoolConnected(axe, 1);
+              @let e0 = c0 ? '' : 'text-danger';
+              @let e1 = c1 ? '' : 'text-danger';
+              <td class="shrink {{ e0 }}">{{ getActivePoolHashrate(axe, 0) | hashSuffix }}</td>
+              <td class="shrink {{ e1 }}">{{ getActivePoolHashrate(axe, 1) | hashSuffix }}</td>
+              <td class="shrink {{ e0 }}">
+                {{ c0 ? p0.accepted : 0 }}<br />
+                {{ c0 ? p0.rejected : 0 }}
+              </td>
+              <td class="shrink {{ e1 }}">
+                {{ c1 ? p1.accepted : 0 }}<br />
+                {{ c1 ? p1.rejected : 0 }}
+              </td>
+              <td class="shrink {{ e0 }}">{{ c0 ? p0.poolDifficulty : 0 }}</td>
+              <td class="shrink {{ e1 }}">{{ c1 ? p1.poolDifficulty : 0 }}</td>
+              <td class="shrink {{ e0 }}">{{ (c0 ? p0.bestDiff : 0) | humanReadable }}</td>
+              <td class="shrink {{ e1 }}">{{ (c1 ? p1.bestDiff : 0) | humanReadable }}</td>
             </tr>
+
           </ng-container>
         </tbody>
       </table>
