switched bestDiffs to number but kept swarm compatible

--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -137,7 +137,7 @@
               <div class="d-flex justify-content-between align-items-center mb-3">
                 <div>
                   <div class="font-weight-bold text-lg">
-                    {{ info.bestDiff }}
+                    {{ info.bestDiff | humanReadable }}
                     <small class="text-hint">{{ 'HOME.BEST_DIFF_ALLTIME' | translate }}</small>
                   </div>
                 </div>
